nqc/src/ast/snapshots/nqc__ast__test__error_snapshot_tests@var_dec_eq_eq.nqc.snap
---
source: nqc/src/ast/mod.rs
expression: "format!(\"{err:?}\")"
input_file: nqc/tests/bad/var_dec_eq_eq.nqc
---
  × error
   ╭────
 1 │ int var = = 5;
   ·           ┬
   ·           ╰── Syntax error: Invalid token Eq, expected var or fn
   ╰────
